--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "autoprefixer": "^9",
     "aws-sdk": "^2.848.0",
     "axios": "^0.21.1",
     "cross-env": "^7.0.2",
     "next": "latest",
+    "postcss": "^7",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-promise": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "tailwindcss": "^2.0.1-compat"
   },
   "devDependencies": {
     "@types/node": "^12.0.12",
