--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dynamo:stop": "sudo docker stop dynamoLocal"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "autoprefixer": "^9",
     "aws-sdk": "^2.848.0",
     "axios": "^0.21.1",
@@ -21,7 +22,9 @@
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
     "react-promise": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "react-table": "^7.6.3",
+    "rxjs": "^6.6.3",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.9.0",
@@ -29,6 +32,7 @@
     "@types/node": "^12.0.12",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-table": "^7.0.29",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
